[gd_scene load_steps=10 format=2]

[ext_resource path="res://src/game/environment/pickables/HealingMushroom.gd" type="Script" id=1]
[ext_resource path="res://assets/textures/items/mushrooms.png" type="Texture" id=2]

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("MushroomBody:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "idle"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("MushroomBody:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 2 ), Vector2( 0, -2 ) ]
}

[sub_resource type="RectangleShape2D" id=1]

[sub_resource type="CanvasItemMaterial" id=4]
particles_animation = true
particles_anim_h_frames = 8
particles_anim_v_frames = 5
particles_anim_loop = false

[sub_resource type="Gradient" id=5]
offsets = PoolRealArray( 0.607656, 1 )
colors = PoolColorArray( 1, 1, 1, 1, 1, 1, 1, 0 )

[sub_resource type="GradientTexture" id=6]
gradient = SubResource( 5 )

[sub_resource type="ParticlesMaterial" id=7]
emission_shape = 1
emission_sphere_radius = 10.0
flag_disable_z = true
direction = Vector3( 0, -1, 0 )
spread = 15.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 100.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
angle = 90.0
angle_random = 1.0
scale = 0.5
color_ramp = SubResource( 6 )
anim_speed = 0.05
anim_offset = 1.0
anim_offset_random = 1.0

[node name="HealingMushroom" type="Node2D"]
script = ExtResource( 1 )

[node name="IdleAnimation" type="AnimationPlayer" parent="."]
autoplay = "idle"
anims/RESET = SubResource( 2 )
anims/idle = SubResource( 3 )

[node name="MushroomBody" type="Sprite" parent="."]
texture = ExtResource( 2 )
hframes = 8
vframes = 5

[node name="PickArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="PickArea"]
shape = SubResource( 1 )

[node name="PickupParticles" type="Particles2D" parent="."]
material = SubResource( 4 )
emitting = false
amount = 3
lifetime = 0.25
one_shot = true
explosiveness = 1.0
process_material = SubResource( 7 )
texture = ExtResource( 2 )

[connection signal="body_entered" from="PickArea" to="." method="_on_PickArea_body_entered"]
